Finalised UI and made created flexbox containers

--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
         <div class="box"><p>Demystify the captain selction process. Let the algorithm do it for you!</p></div>
       </section>
     </header>
-    <div class="container">
-      <main>
-        <p>Select your captain for the upcoming gameweek from the players you deem the best available to choose from.</p>
-        <p></p>
-      </main>
-      <footer><small class="credits">Copyright Fred Lunjevich 2020</small></footer>
-    </div>
+    <main>
+      <div class="container container--body">
+        <div>Content</div>
+      </div>
+    </main>
+    <footer><small class="credits">Copyright Fred Lunjevich 2020</small></footer>
   </body>
 </html>
