--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="fantasy premier league, fpl, premier league, soccer, football, english football, english soccer, manchester united, liverpool fc, manchester city, man city" />
     <!-- Materialize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
@@ -47,14 +50,77 @@
         </div>
       </section>
       <section class="container header__description">
-        <div class="box"><p>Demystify the captain selction process. Let the algorithm do it for you!</p></div>
+        <div class="box"><p>Fantasy Premier League is made tougher by those of us who agonise over transfer and captaincy decisions. This app helps you demystify the captain selection process. Get peiece of mind and just let our algorithm select your next captain!</p></div>
       </section>
     </header>
     <main>
-      <div class="container container--body">
-        <div>Content</div>
-      </div>
+      <section class="container--body">
+        <div class="players-list-container">
+          <p>Players in the mix: <span id="players-list" data-players-list></span></p>
+        </div>
+        <div class="card-container">
+          <div class="row-flex">
+            <div class="card flex-card purple darken-4" id="card-inner" data-card-inner>
+              <div class="card-content white-text">
+                <span class="card-title" data-player-name>Antonio</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="go-button-container"><button class="btn waves-effect waves-light">Select My Captain!</button></div>
+      </section>
+      <!-- End Card Container -->
+      <section class="full-width-container full-width-container--form">
+        <div class="container container--body">
+          <h4 class="center-align">Add players to the lottery</h4>
+          <p class="center-align">Enter player's last name...</p>
+          <div class="form-container">
+            <form class="col s12 player-form">
+              <div class="row">
+                <div class="input-field col s12">
+                  <i class="material-icons prefix">person_add</i>
+                  <input id="last_name" type="text" class="validate" />
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-submit col s12">
+                  <button class="btn waves-effect waves-light btn-f" type="submit" name="action">
+                    Add player
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!-- End Form Container -->
+        </div>
+      </section>
+      <!-- End Form Container -->
+      <!--   <section class="players p1">
+          <h4>Player list</h4>
+          <ul id="players-list" data-player-list>
+            <li>Antonio</li>
+            <li>Sterling</li>
+            <li>Fernandes</li>
+            <li>Greenwood</li>
+          </ul>
+        </section>
+      </section> -->
+      <!-- End Container Body-->
     </main>
-    <footer><small class="credits">Copyright Fred Lunjevich 2020</small></footer>
+    <footer>
+      <small class="credits">Copyright Fred Lunjevich <span id="year"></span></small>
+    </footer>
+    <!-- <template id="card-template">
+      <div class="row">
+        <div class="col s12 m6">
+          <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+              <span class="card-title">Card Title</span>
+              <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </template> -->
   </body>
 </html>
