Added flip card functionality

--- a/index.html
+++ b/index.html
@@ -50,30 +50,29 @@
         </div>
       </section>
       <section class="container header__description">
-        <div class="box"><p>Fantasy Premier League is made tougher by those of us who agonise over transfer and captaincy decisions. This app helps you demystify the captain selection process. Get peiece of mind and just let our algorithm select your next captain!</p></div>
+        <div class="box"><p>Don't agonise over FPL captaincy decisions. This selection tool will give you piece of mind &#8212; just let our algorithm select your next captain!</p></div>
       </section>
     </header>
     <main>
-      <section class="container--body">
+      <section class="container--body-grid">
         <div class="players-list-container">
           <p>Players in the mix: <span id="players-list" data-players-list></span></p>
         </div>
         <div class="card-container">
           <div class="row-flex">
-            <div class="card flex-card purple darken-4" id="card-inner" data-card-inner>
+            <div class="card flex-card">
               <div class="card-content white-text">
-                <span class="card-title" data-player-name>Antonio</span>
+                <h1 class="title--h1" data-captain></h1>
               </div>
             </div>
           </div>
         </div>
-        <div class="go-button-container"><button class="btn waves-effect waves-light">Select My Captain!</button></div>
+        <div class="go-button-container"><button class="btn waves-effect waves-light" data-go-button>Select My Captain!</button></div>
       </section>
       <!-- End Card Container -->
       <section class="full-width-container full-width-container--form">
         <div class="container container--body">
-          <h4 class="center-align">Add players to the lottery</h4>
-          <p class="center-align">Enter player's last name...</p>
+          <p class="center-align">Enter player's last name to add to the list</p>
           <div class="form-container">
             <form class="col s12 player-form">
               <div class="row">
